nit: Fix text overflow

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -76,7 +76,7 @@
 }
 
 .book {
-  width: 180px;
+  width: 190px;
 }
 
 .bookLink {
